2007-09-05  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix regression for bug #634 (bug #642)

2007-09-02  Paul Stevens <paul@nfg.nl>

	* ChangeLog, sql/postgresql/create_tables.pgsql, 
	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	fix typo

2007-09-02  Paul J Stevens <paul@nfg.nl>

	* sql/postgresql/create_tables.pgsql, 
	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	fix typo

2007-08-31  Paul Stevens <paul@nfg.nl>

	* ChangeLog, check_dbmail_db.c, db.c:
	fix regression for bug #639 (bug #641)

2007-08-31  Paul J Stevens <paul@nfg.nl>
	* check_dbmail_db.c, db.c:
	fix regression for bug #639 (bug #641)

2007-08-27  Paul J Stevens <paul@nfg.nl>
	* db.c, db.h, dbmail-mailbox.c, dbmail.h.in, dbmailtypes.h, 
	man/Makefile.in, modules/dbmysql.c, modules/dbpgsql.c, 
	modules/dbsqlite.c, sql/postgresql/create_tables.pgsql, 
	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	add partial index to headervalue field (bug #634)

2007-08-26  Paul J Stevens <paul@nfg.nl>

	* memblock.c, memblock.h:
	memblock cleanup (bug #628)

2007-08-24  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_db.c, db.c:
	escape underscore in mailbox names during matching (bug #639)

2007-08-13  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	More testing and better debugging on fix for bug #632.

2007-08-07  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.c:
	Added new -e option to edit scripts in-place.
	* export.c:
	Added new -D option to set deleted status on messages.
	* main.c, user.c:
	Cleaned up the help text a little bit.
	* modules/sortsieve.c:
	Accepted modified version of patch for bug #632.

2007-07-28  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h, maintenance.c:
	add missing integrity check (bug #305)
	* serverchild.c:
	fix trivial compiler warning

2007-07-27  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Accepted patch from Jonathan Fealy to allow unsubscribe from
	nonexistent mailboxes.

2007-07-26  Paul J Stevens <paul@nfg.nl>
