@@ -187,24 +187,28 @@ START_TEST(test_dbmail_message_get_internal_date)
 	/* baseline */
 	result = dbmail_message_get_internal_date(m, 0);
 	fail_unless(MATCH(expect,result),"dbmail_message_get_internal_date failed exp [%s] got [%s]", expect, result);
+	g_free(result);
 
 	/* should be the same */
 	result = dbmail_message_get_internal_date(m, 2007);
 	fail_unless(MATCH(expect,result),"dbmail_message_get_internal_date failed exp [%s] got [%s]", expect, result);
+	g_free(result);
 
 	/* capped to 2004, which should also be the same  */
 	result = dbmail_message_get_internal_date(m, 2004);
 	fail_unless(MATCH(expect,result),"dbmail_message_get_internal_date failed exp [%s] got [%s]", expect, result);
+	g_free(result);
 
 	/* capped to 2003, should be different */
 	result = dbmail_message_get_internal_date(m, 2003);
 	fail_unless(MATCH(expect03,result),"dbmail_message_get_internal_date failed exp [%s] got [%s]", expect03, result);
+	g_free(result);
 
 	/* capped to 1975, should be way different */
 	result = dbmail_message_get_internal_date(m, 1975);
 	fail_unless(MATCH(expect75,result),"dbmail_message_get_internal_date failed exp [%s] got [%s]", expect75, result);
-
 	g_free(result);
+
 	g_string_free(s,TRUE);
 	dbmail_message_free(m);
 	
@@ -511,6 +515,7 @@ START_TEST(test_dbmail_message_construct)
 	fail_unless(MATCH(expect,result),"dbmail_message_construct failed\n%s\n%s", expect, result);
 	dbmail_message_free(message);
 	g_free(body);
+	g_free(result);
 	g_free(expect);
 
 	body = g_strdup("Mit freundlichen Gr=C3=BC=C3=9Fen");
